--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-hot-toast": "^2.2.0",
     "react-tooltip": "^4.2.21",
     "simple-icons": "^6.22.0"
   },
